# bundle-repo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE.txt  Makefile.toml  README-cratesio.md  README.md  TODO.md  filelist.xml  renovate.json
.github/workflows/: release.yml
src/: cli.rs  embedded.rs  filelist.rs  main.rs  repo.rs  secret_scanner.rs  structs.rs  tokenizer.rs  xml_output.rs
