[package]
name = "bundle_repo"
version = "0.2.0"
description = "Pack a local or remote Git Repository to XML for LLM Consumption."
readme = "README.md"
edition = "2021"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
repository = "https://seapagan.github.io/bundle-repo/"
exclude = [".github/*", "docs/*"]
categories = [
  "command-line-utilities",
  "development-tools",
  "text-processing",
  "parsing",
]
keywords = ["llm", "tokenizer", "ai", "cli", "git"]

[[bin]]
name = "bundlerepo"
path = "src/main.rs"

[dependencies]
git2 = "0.19"
tempfile = "3.13"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
ignore = "0.4"
xml = "0.8"
tiktoken-rs = "0.6.0"
tabled = "0.16.0"
infer = "0.16.0"
arboard = { version = "3.4.1", default-features = false, features = [
  "windows-sys",
] }
tree-sitter = "0.23"

# Default Language support
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

# Optional Language support
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-scss = { version = "1.0.0", optional = true }

[features]
default = []

standard = [
  "python",
  "javascript",
  "html",
  "css",
  "rust",
  "typescript",
] # common languages

# Individual language features
python = ["tree-sitter-python"]
javascript = ["tree-sitter-javascript"]
html = ["tree-sitter-html"]
css = ["tree-sitter-css"]
rust = ["tree-sitter-rust"]
typescript = ["tree-sitter-typescript"]

go = ["tree-sitter-go"]
java = ["tree-sitter-java"]
c = ["tree-sitter-c"]
cpp = ["tree-sitter-cpp"]
scss = ["tree-sitter-scss"]

# `full` feature includes all optional languages
full = ["standard", "go", "java", "c", "cpp", "scss"]
