[package]
name = "bundle_repo"
version = "0.3.0"
description = "Pack a local or remote Git Repository to XML for LLM Consumption."
readme = "README-cratesio.md"
edition = "2021"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
repository = "https://github.com/seapagan/bundle-repo/"
exclude = [".github/*", "docs/*"]
categories = [
  "command-line-utilities",
  "development-tools",
  "text-processing",
  "parsing",
]
keywords = ["llm", "tokenizer", "ai", "cli", "git"]

[[bin]]
name = "bundlerepo"
path = "src/main.rs"

[dependencies]
git2 = "0.19"
tempfile = "3.3"
url = "2.2"
clap = { version = "4.1", features = ["derive"] }
regex = "1"
ignore = "0.4"
xml = "0.8"
tiktoken-rs = "0.6.0"
tabled = "0.17.0"
infer = "0.16.0"
arboard = { version = "3.4.1", default-features = false, features = [
  "windows-sys",
] }
serde = { version = "1.0.214", features = ["derive"] }
config = "0.14.1"
dirs-next = "2.0.0"

[features]
default = []
