[package]
name = "bundle_repo"
version = "0.5.0"
description = "Pack a local or remote Git Repository to XML for LLM Consumption."
readme = "README-cratesio.md"
edition = "2021"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
repository = "https://github.com/seapagan/bundle-repo/"
exclude = [".github/*", "docs/*"]
categories = [
  "command-line-utilities",
  "development-tools",
  "text-processing",
  "parsing",
]
keywords = ["llm", "tokenizer", "ai", "cli", "git"]

[[bin]]
name = "bundlerepo"
path = "src/main.rs"

[dependencies]
git2 = "0.20"
tempfile = "3.3"
url = "2.2"
clap = { version = "4.1", features = ["derive"] }
regex = "1"
ignore = "0.4"
xml = "0.8"
tiktoken-rs = "0.6.0"
tokenizers = "0.21"
rust-embed = "8.2.0"
tabled = "0.17.0"
infer = "0.19.0"
arboard = { version = "3.4.1", default-features = false, features = [
  "windows-sys",
] }
serde = { version = "1.0.214", features = ["derive"] }
config = "0.15.0"
dirs-next = "2.0.0"
encoding_rs = "0.8.33"

[features]
default = []

[profile.dev]
incremental = true

[dev-dependencies]
tempfile = "3.8"
fs_extra = "1.3"
temp-env = "0.3.6"
